5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1590_1570.log
== TEST (2019-03-20 14:59:05) 
-- CODE:
texto = "Gosto de musicas"
print(texto.lower())

-- OUTPUT:
gosto de musicas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 14:59:06) 
-- CODE:
texto = "Gosto de musicas"
print(texto.lower())

-- EXECUTION TIME:
0.166887
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
gosto de musicas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 14:59:08) 
-- CODE:
texto = "Gosto de musicas"
print(texto.lower())

-- OUTPUT:
gosto de musicas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 14:59:11) 
-- CODE:
texto = "Gosto de musicas"
print(texto.lower())

-- EXECUTION TIME:
0.195841
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
gosto de musicas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 14:59:23) 
-- CODE:
texto = "GOSTO DE MUSICA"
print(texto.lower())

-- OUTPUT:
gosto de musica
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 14:59:25) 
-- CODE:
texto = "GOSTO DE MUSICA"
print(texto.lower())

-- EXECUTION TIME:
0.143084
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
gosto de musica
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:00:03) 
-- CODE:
texto = "LARA SANTANA"
print(texto.lower())

-- OUTPUT:
lara santana
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:00:04) 
-- CODE:
texto = "LARA SANTANA"
print(texto.lower())

-- EXECUTION TIME:
0.206573
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
lara santana
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:00:05) 
-- CODE:
texto = "LARA SANTANA"
print(texto.lower())

-- OUTPUT:
lara santana
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:00:34) 
-- CODE:
texto = "LARA SANTANA"
print(texto.lower())

-- EXECUTION TIME:
0.123621
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
lara santana
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:02:26) 
-- CODE:
input ()
print(input (texto.lower()))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input (texto.lower()))
NameError: name 'texto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:06:55) 
-- CODE:
texto = input("digite um frase: ")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input (texto.lower()))
NameError: name 'texto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:08:10) 
-- CODE:
texto = input("digite um frase: ")
print("voce digitou", texto)

-- OUTPUT:
voce digitou PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:08:51) 
-- CODE:
var = input("digite um frase: LARA SANTANA ")
print("voce digitou", var)

-- OUTPUT:
voce digitou PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:10:27) 
-- CODE:
var = input("digite um frase: LARA SANTANA ")
print("voce digitou", var)
print(var.lower())

-- OUTPUT:
voce digitou PRIMEIRO_CASO_DE_TESTE
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:10:28) 
-- CODE:
var = input("digite um frase: LARA SANTANA ")
print("voce digitou", var)
print(var.lower())

-- OUTPUT:
voce digitou PRIMEIRO_CASO_DE_TESTE
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:10:30) 
-- CODE:
var = input("digite um frase: LARA SANTANA ")
print("voce digitou", var)
print(var.lower())

-- EXECUTION TIME:
0.143773
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
voce digitou PRIMEIRO_CASO_DE_TESTE
primeiro_caso_de_teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:22:25) 
-- CODE:
nome = ("digite um nome: ")
print(nome.lower())


-- OUTPUT:
digite um nome:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:22:39) 
-- CODE:
nome = ("digite um nome:")
print(nome.lower())


-- OUTPUT:
digite um nome:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:22:51) 
-- CODE:
nome = ("digite um nome: ")
print(nome.lower())


-- OUTPUT:
digite um nome:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:23:07) 
-- CODE:
nome = input("digite um nome: ")
print(nome.lower())


-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:23:07) 
-- CODE:
nome = input("digite um nome: ")
print(nome.lower())


-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:23:08) 
-- CODE:
nome = input("digite um nome: ")
print(nome.lower())


-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:23:27) 
-- CODE:
nome = input("digite um nome: ")
print(nome.lower())


-- EXECUTION TIME:
0.129467
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
primeiro_caso_de_teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
